--- a/Notebooks/Tensorflow.ipynb
+++ b/Notebooks/Tensorflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense,Dropout,Conv2D,MaxPooling2D,Flatten\n",
     "from tensorflow.keras.datasets import boston_housing,fashion_mnist,cifar10\n",
-    "from tensorflow.keras.utils import to_categorical"
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.callbacks import TensorBoard"
    ]
   },
   {
@@ -397,31 +398,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-      "32768/29515 [=================================] - 0s 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-      "26427392/26421880 [==============================] - 4s 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-      "8192/5148 [===============================================] - 0s 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-      "4423680/4422102 [==============================] - 0s 0us/step\n"
+      "Collecting requests==2.21.0\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7d/e3/20f3d364d6c8e5d2353c72a67778eb189176f08e873c9900e10c0287b84b/requests-2.21.0-py2.py3-none-any.whl (57kB)\n",
+      "\u001b[K     |████████████████████████████████| 61kB 233kB/s eta 0:00:011\n",
+      "\u001b[?25hRequirement already satisfied: chardet<3.1.0,>=3.0.2 in /home/jash/miniconda3/envs/ml/lib/python3.7/site-packages (from requests==2.21.0) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /home/jash/miniconda3/envs/ml/lib/python3.7/site-packages (from requests==2.21.0) (2.8)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/jash/miniconda3/envs/ml/lib/python3.7/site-packages (from requests==2.21.0) (2019.11.28)\n",
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /home/jash/miniconda3/envs/ml/lib/python3.7/site-packages (from requests==2.21.0) (1.24.3)\n",
+      "\u001b[31mERROR: pyrebase 3.0.27 has requirement requests==2.11.1, but you'll have requests 2.21.0 which is incompatible.\u001b[0m\n",
+      "Installing collected packages: requests\n",
+      "  Found existing installation: requests 2.11.1\n",
+      "    Uninstalling requests-2.11.1:\n",
+      "      Successfully uninstalled requests-2.11.1\n",
+      "Successfully installed requests-2.21.0\n"
      ]
     }
    ],
+   "source": [
+    "!pip install requests==2.21.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logs_dir = \"./logs\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-d90c462d1a52a15a\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-d90c462d1a52a15a\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir {logs_dir}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "(X_train,y_train),(X_test,y_test) = fashion_mnist.load_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +521,7 @@
        "(10000, 784)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +541,7 @@
        "(60000, 784)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,30 +568,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_4 (Dense)              (None, 512)               401920    \n",
+      "dense (Dense)                (None, 512)               401920    \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 512)               0         \n",
+      "dropout (Dropout)            (None, 512)               0         \n",
       "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 512)               262656    \n",
+      "dense_1 (Dense)              (None, 512)               262656    \n",
       "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 512)               0         \n",
+      "dropout_1 (Dropout)          (None, 512)               0         \n",
       "_________________________________________________________________\n",
-      "dense_6 (Dense)              (None, 256)               131328    \n",
+      "dense_2 (Dense)              (None, 256)               131328    \n",
       "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, 256)               0         \n",
+      "dropout_2 (Dropout)          (None, 256)               0         \n",
       "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 10)                2570      \n",
+      "dense_3 (Dense)              (None, 10)                2570      \n",
       "=================================================================\n",
       "Total params: 798,474\n",
       "Trainable params: 798,474\n",
@@ -528,7 +606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensorboard_callback = TensorBoard(logs_dir,histogram_freq = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -545,60 +632,60 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "235/235 [==============================] - 4s 15ms/step - loss: 1.0691 - accuracy: 0.6101 - val_loss: 0.4638 - val_accuracy: 0.8320\n",
+      "235/235 [==============================] - 15s 49ms/step - loss: 1.0803 - accuracy: 0.6067 - val_loss: 0.4645 - val_accuracy: 0.8332\n",
       "Epoch 2/20\n",
-      "235/235 [==============================] - 3s 14ms/step - loss: 0.5163 - accuracy: 0.8172 - val_loss: 0.4153 - val_accuracy: 0.8504\n",
+      "235/235 [==============================] - 5s 20ms/step - loss: 0.5034 - accuracy: 0.8193 - val_loss: 0.4122 - val_accuracy: 0.8480\n",
       "Epoch 3/20\n",
-      "235/235 [==============================] - 3s 14ms/step - loss: 0.4544 - accuracy: 0.8389 - val_loss: 0.3985 - val_accuracy: 0.8566\n",
+      "235/235 [==============================] - 5s 19ms/step - loss: 0.4610 - accuracy: 0.8383 - val_loss: 0.4054 - val_accuracy: 0.8528\n",
       "Epoch 4/20\n",
-      "235/235 [==============================] - 4s 15ms/step - loss: 0.4290 - accuracy: 0.8462 - val_loss: 0.3969 - val_accuracy: 0.8502\n",
+      "235/235 [==============================] - 5s 19ms/step - loss: 0.4341 - accuracy: 0.8444 - val_loss: 0.3817 - val_accuracy: 0.8629\n",
       "Epoch 5/20\n",
-      "235/235 [==============================] - 3s 15ms/step - loss: 0.4231 - accuracy: 0.8490 - val_loss: 0.3827 - val_accuracy: 0.8605\n",
+      "235/235 [==============================] - 5s 20ms/step - loss: 0.4095 - accuracy: 0.8514 - val_loss: 0.3805 - val_accuracy: 0.8645\n",
       "Epoch 6/20\n",
-      "235/235 [==============================] - 3s 15ms/step - loss: 0.4004 - accuracy: 0.8563 - val_loss: 0.3762 - val_accuracy: 0.8622\n",
+      "235/235 [==============================] - 4s 19ms/step - loss: 0.3950 - accuracy: 0.8579 - val_loss: 0.3733 - val_accuracy: 0.8670\n",
       "Epoch 7/20\n",
-      "235/235 [==============================] - 3s 15ms/step - loss: 0.3833 - accuracy: 0.8599 - val_loss: 0.3657 - val_accuracy: 0.8663\n",
+      "235/235 [==============================] - 5s 23ms/step - loss: 0.3853 - accuracy: 0.8608 - val_loss: 0.3639 - val_accuracy: 0.8647\n",
       "Epoch 8/20\n",
-      "235/235 [==============================] - 4s 15ms/step - loss: 0.3718 - accuracy: 0.8669 - val_loss: 0.3555 - val_accuracy: 0.8692\n",
+      "235/235 [==============================] - 5s 20ms/step - loss: 0.3782 - accuracy: 0.8639 - val_loss: 0.3555 - val_accuracy: 0.8700\n",
       "Epoch 9/20\n",
-      "235/235 [==============================] - 4s 16ms/step - loss: 0.3686 - accuracy: 0.8665 - val_loss: 0.3589 - val_accuracy: 0.8706\n",
+      "235/235 [==============================] - 5s 20ms/step - loss: 0.3700 - accuracy: 0.8658 - val_loss: 0.3512 - val_accuracy: 0.8719\n",
       "Epoch 10/20\n",
-      "235/235 [==============================] - 4s 15ms/step - loss: 0.3693 - accuracy: 0.8664 - val_loss: 0.3456 - val_accuracy: 0.8725\n",
+      "235/235 [==============================] - 5s 20ms/step - loss: 0.3672 - accuracy: 0.8666 - val_loss: 0.3553 - val_accuracy: 0.8751\n",
       "Epoch 11/20\n",
-      "235/235 [==============================] - 4s 17ms/step - loss: 0.3527 - accuracy: 0.8724 - val_loss: 0.3416 - val_accuracy: 0.8780\n",
+      "235/235 [==============================] - 4s 16ms/step - loss: 0.3620 - accuracy: 0.8682 - val_loss: 0.3385 - val_accuracy: 0.8742\n",
       "Epoch 12/20\n",
-      "235/235 [==============================] - 4s 18ms/step - loss: 0.3593 - accuracy: 0.8691 - val_loss: 0.3414 - val_accuracy: 0.8737\n",
+      "235/235 [==============================] - 5s 20ms/step - loss: 0.3476 - accuracy: 0.8724 - val_loss: 0.3430 - val_accuracy: 0.8750\n",
       "Epoch 13/20\n",
-      "235/235 [==============================] - 4s 18ms/step - loss: 0.3397 - accuracy: 0.8755 - val_loss: 0.3459 - val_accuracy: 0.8753\n",
+      "235/235 [==============================] - 4s 19ms/step - loss: 0.3503 - accuracy: 0.8723 - val_loss: 0.3365 - val_accuracy: 0.8762\n",
       "Epoch 14/20\n",
-      "235/235 [==============================] - 4s 17ms/step - loss: 0.3417 - accuracy: 0.8767 - val_loss: 0.3398 - val_accuracy: 0.8769\n",
+      "235/235 [==============================] - 4s 18ms/step - loss: 0.3400 - accuracy: 0.8745 - val_loss: 0.3469 - val_accuracy: 0.8746\n",
       "Epoch 15/20\n",
-      "235/235 [==============================] - 4s 19ms/step - loss: 0.3369 - accuracy: 0.8769 - val_loss: 0.3397 - val_accuracy: 0.8783\n",
+      "235/235 [==============================] - 4s 17ms/step - loss: 0.3390 - accuracy: 0.8767 - val_loss: 0.3424 - val_accuracy: 0.8747\n",
       "Epoch 16/20\n",
-      "235/235 [==============================] - 4s 16ms/step - loss: 0.3330 - accuracy: 0.8776 - val_loss: 0.3378 - val_accuracy: 0.8767\n",
+      "235/235 [==============================] - 5s 21ms/step - loss: 0.3348 - accuracy: 0.8783 - val_loss: 0.3327 - val_accuracy: 0.8777\n",
       "Epoch 17/20\n",
-      "235/235 [==============================] - 4s 16ms/step - loss: 0.3341 - accuracy: 0.8784 - val_loss: 0.3301 - val_accuracy: 0.8799\n",
+      "235/235 [==============================] - 4s 19ms/step - loss: 0.3326 - accuracy: 0.8791 - val_loss: 0.3336 - val_accuracy: 0.8799\n",
       "Epoch 18/20\n",
-      "235/235 [==============================] - 4s 16ms/step - loss: 0.3288 - accuracy: 0.8799 - val_loss: 0.3300 - val_accuracy: 0.8802\n",
+      "235/235 [==============================] - 4s 18ms/step - loss: 0.3322 - accuracy: 0.8785 - val_loss: 0.3258 - val_accuracy: 0.8812\n",
       "Epoch 19/20\n",
-      "235/235 [==============================] - 4s 18ms/step - loss: 0.3304 - accuracy: 0.8802 - val_loss: 0.3379 - val_accuracy: 0.8788\n",
+      "235/235 [==============================] - 4s 18ms/step - loss: 0.3316 - accuracy: 0.8810 - val_loss: 0.3284 - val_accuracy: 0.8822\n",
       "Epoch 20/20\n",
-      "235/235 [==============================] - 4s 18ms/step - loss: 0.3300 - accuracy: 0.8786 - val_loss: 0.3305 - val_accuracy: 0.8806\n"
+      "235/235 [==============================] - 5s 21ms/step - loss: 0.3183 - accuracy: 0.8839 - val_loss: 0.3226 - val_accuracy: 0.8835\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fbf34a5d850>"
+       "<tensorflow.python.keras.callbacks.History at 0x7fe2015bb210>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train,y_train,batch_size = 256,epochs = 20,validation_data = (X_test,y_test))"
+    "model.fit(X_train,y_train,batch_size = 256,epochs = 20,validation_data = (X_test,y_test),callbacks = [tensorboard_callback])"
    ]
   },
   {
